2001-09-27  Ray Tomlinson  <RTomlinson@bbn.com>

	* PersistenceException.java (Repository):
	Add a little javadoc.

2001-08-31  Ray Tomlinson  <RTomlinson@bbn.com>

	* Persistence.java: 
	* FilePersistence.java: 
	* DummyPersistence.java: 
	* DatabasePersistence.java: 
	* BasePersistence.java:
	Add suffix argument to disableWrite and readSequenceNumbers
	methods to allow arbitrary archive to be specified from the
	command line. In the case of DatabasePersistence, the suffix is
	parsed into its numeric value and used to query for the correct
	archive delta.

2001-08-30  Ray Tomlinson  <RTomlinson@bbn.com>

	* Persistence.java: 
	* FilePersistence.java: 
	* DummyPersistence.java: 
	* DatabasePersistence.java: 
	* BasePersistence.java:
	Change interface to permit full versus incremental persistence.
	Retain full persistence deltas for archiving. Also make an extra
	copy of the sequence file for each full delta. This facilitates
	returning to archived data.

2001-08-24  Ray Tomlinson  <RTomlinson@bbn.com>

	* BasePersistence.java:
	Remove clusters List, it's not needed and it holds onto old
	clusters after they have been moved elsewhere.

2001-08-13  Ray Tomlinson  <rtomlinson@bbn.com>

	* RehydrationResult.java:
	Used to pass back the MessageManager after rehydration in addition
	to the old return result. The MessageManager is not managed by the
	persistence module any more. See BasePersistence.

	* PersistenceOutputStream.java:
	Add accessor to get the bytes of the output stream. Used to
	provide the object needed to implement getState().

	* PersistenceObject.java:
	A wrapper around a byte array of serialized persistence
	information. Used to implement the component getState methods.

	* PersistenceNotEnabledException.java:
	An exception to throw when an operation requires persistence to
	be enabled and it isn't.	

	* Persistence.java:
	Change interface to pass additional information in and out when
	performing persistence. See BasePersistence for details.
