@@ -54,4 +54,6 @@ public interface Persistence {
   boolean hasSubscriberStates();
   void discardSubscriberState(Subscriber subscriber);
   void disableWrite(String sequenceNumberSuffix);
+  java.sql.Connection getDatabaseConnection(Object locker);
+  void releaseDatabaseConnection(Object locker);
 }
